<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".BanglaShorbornoFragment.Shorborno_Home_Fragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout

            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">



            <androidx.cardview.widget.CardView

                android:layout_marginTop="50dp"
                android:id="@+id/cardBanglaShorborno1"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"
                app:cardElevation="16dp">

                <LinearLayout
                    android:background="#CAC59A"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp">



                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:text="@string/shorborno1"
                        android:textColor="#000"
                        android:textSize="50sp" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView


                android:id="@+id/cardBanglaShorborno2"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"

                app:cardElevation="16dp">

                <LinearLayout
                    android:background="#CAC59A"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:text="@string/shorborno2"
                        android:textColor="#000"
                        android:textSize="50sp" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView


                android:id="@+id/cardBanglaShorborno3"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"

                app:cardElevation="16dp">

                <LinearLayout
                    android:background="#CAC59A"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:text="@string/shorborno3"
                        android:textColor="#000"
                        android:textSize="50sp" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView


                android:id="@+id/cardBanglaShorborno4"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"

                app:cardElevation="16dp">

                <LinearLayout
                    android:background="#CAC59A"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:text="@string/shorborno4"
                        android:textColor="#000"
                        android:textSize="50sp" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView


                android:id="@+id/cardBanglaShorborno5"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"
                app:cardElevation="16dp">

                <LinearLayout
                    android:background="#CAC59A"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:text="@string/shorborno5"
                        android:textColor="#000"
                        android:textSize="50sp" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView


                android:id="@+id/cardBanglaShorborno6"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"

                app:cardElevation="16dp">

                <LinearLayout
                    android:background="#CAC59A"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:text="@string/shorborno6"
                        android:textColor="#000"
                        android:textSize="50sp" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView


                android:id="@+id/cardBanglaShorborno7"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"

                app:cardElevation="16dp">

                <LinearLayout
                    android:background="#CAC59A"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:text="@string/shorborno7"
                        android:textColor="#000"
                        android:textSize="50sp" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView


                android:id="@+id/cardBanglaShorborno8"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"

                app:cardElevation="16dp">

                <LinearLayout
                    android:background="#CAC59A"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:text="@string/shorborno8"
                        android:textColor="#000"
                        android:textSize="50sp" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView


                android:id="@+id/cardBanglaShorborno9"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"

                app:cardElevation="16dp">

                <LinearLayout
                    android:background="#CAC59A"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:text="@string/shorborno9"
                        android:textColor="#000"
                        android:textSize="50sp" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView


                android:id="@+id/cardBanglaShorborno10"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"

                app:cardElevation="16dp">

                <LinearLayout
                    android:background="#CAC59A"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:text="@string/shorborno10"
                        android:textColor="#000"
                        android:textSize="50sp" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView


                android:id="@+id/cardBanglaShorborno11"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"

                app:cardElevation="16dp">

                <LinearLayout
                    android:background="#CAC59A"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:text="@string/shorborno11"
                        android:textColor="#000"
                        android:textSize="50sp" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </ScrollView>

</FrameLayout>